<resources>
    <string name="app_name">UNO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="categoria_info">Selecciona al menos tres categorias</string>

    <string name="campo_titulo">Título</string>
    <string name="campo_precio">Precio</string>
    <string name="campo_descripcion">Descripción</string>
    <string name="campo_agregar_foto">Agregar Imagen</string>
    <string name="campo_publicar">Publicar</string>
    <string name="campo_seguir">Seguir</string>

    <string name="titulo_contacto">Contactos</string>
    <string name="titulo_descripcion">Descripción</string>


    <string name="fab_producto">Nuevo Producto</string>
    <string name="fab_publicacion">Publicación</string>
    <string name="fab_servicio">Nuevo Servicio</string>
    <string name="fab_solicitud">Hacer Solicitud</string>

    <string name="nav_principal">Principal</string>
    <string name="nav_negocios">Negocios</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="action_buscar">Buscar</string>
    <string name="action_compartir">Compartir</string>
    <string name="action_add_favorite">Agrgar a Favoritos</string>
    <string name="action_report">Reportar</string>
    <string name="action_aceptar">Aceptar</string>
    <string name="action_informacion">Información</string>
    <string name="action_add_foto">Agregar Fotos</string>
    <string name="action_home">Ir a Inicio</string>
    <string name="action_filtro">Filtro</string>
    <string name="action_descargar_imagen">Descargar como imagen</string>
    <string name="action_agregar_favorito">Agregar a Favoritos</string>
    <string name="action_quitar">No quiero ver esto</string>
    <string name="action_detalles">Detalles</string>



    <string name="navigation_drawer_inicio">Principal</string>
    <string name="navigation_drawer_negocio">Negocios</string>
    <string name="navigation_drawer_destacado">Destacado</string>
    <string name="navigation_drawer_favorito">Favoritos</string>
    <string name="navigation_drawer_lista_deseos">Lista de Deseos</string>
    <string name="navigation_drawer_tops">Tops</string>
    <string name="navigation_drawer_informacion">Informacion</string>

    <string name="tab_principal_inicio">Inicio</string>
    <string name="tab_principal_siguiendo">Siguiendo</string>
    <string name="tab_principal_destacado">Destacado</string>
    <string name="tab_producto_informacion">Informacion</string>
    <string name="tab_producto_detalles">Detalles</string>
    <string name="tab_producto_mensajes">mensajes</string>
    <string name="tab_producto_opiniones">Opiniones</string>
    <string name="tab_producto_relacionados">Articulos Relacionados</string>

    <string name="title_activity_vista_producto">VistaProducto</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="title_activity_vista_negocio">VistaNegocio</string>


    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_botton_navigation">BottonNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="next">SIGUIENTE</string>
    <string name="skip">SALTAR</string>
    <string name="start">COMENZAR</string>

    <string name="slide_1_title">¿Buscas algo?</string>
    <string name="slide_1_desc">Encuentra los mejores negocios y servicios</string>

    <string name="slide_2_title">¿Tienes un negocio?</string>
    <string name="slide_2_desc">Crea espacios online y compite por ser el numero uno</string>

    <string name="slide_3_title">Tops</string>
    <string name="slide_3_desc">Tops por categorias</string>

    <string name="slide_4_title">Comencemos</string>
    <string name="slide_4_desc">Todo listo para comenzar</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_categorias">Categorias</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="title_activity_add_producto">Nuevo Producto</string>
    <string name="title_activity_add_solicitud">Nueva Solicitud</string>

    <string name="imagepicker_multiselect_done">Aceptar</string>
    <string name="imagepicker_multiselect_not_enough_singular">Tienes que seleccionar 1 imagen</string>
    <string name="imagepicker_multiselect_not_enough_plural">Tienes que seleccionar %d imagen más</string>
    <string name="imagepicker_multiselect_enough_singular">Tienes seleccionada 1 image</string>
    <string name="imagepicker_multiselect_enough_plural">Tienes seleccionada %d imagenes</string>
    <string name="imagepicker_multiselect_overselect">No puedes selecionar más de %d images</string>
    <string name="imagepicker_gallery_intent_title">Selecciona varias imagenes</string>
    <string name="imagepicker_no_image_text_view">No hay imagenes en tu dispositivo</string>
</resources>
